2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gnome_sudoku.py: Use Ctrl-H for hint. Patch from
	Thomas Andersen in Bug #420325.

2007-05-04  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gsudoku.py: Make fill remove red color when it corrects a 
	mistake. The patch makes "fill" use the same code for changing a 
	number as when done manually. Patch from Thomas Andersen 
	in Bug #393253. 

2007-05-01  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_generator_gui.py: Fix a i18n related crash,
	by strong the number of generated puzzles in a variable,
	instead of extracting it from the label. This solves Bug #428560.

2007-05-01  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_maker.py: Fix a race condition which occurs
	when saving puzzles on exit. The solution is to run the pickle
	operation atomically. This solves Bug #409172 et al.

2007-04-22  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/gnome_sudoku.py Catch exceptions when launching help (Bug #418193)

2007-04-01  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/game_selector.py Sort game name columns numerically (Bug #417191)

2007-03-31  Robert Ancell <robert.ancell@gmail.com>

	* src/lib/game_selector.py Make sure one game is always selected for restoring (Bug #422748)
	* src/lib/gnome_sudoku.py Remember window size when quitting (Bug #380780)

2007-03-25  Robert Ancell <robert.ancell@gmail.com>

	* Use string substitution using dictionary lookups when using ngettext to stop
	  substitution exceptions (Bug #409739)
	* src/lib/game_selector.py Handle corrupted high score entries (Bug #413848)
	* Removed dialog separators to be HIG compliant
	* src/lib/gsudoku.py Stop number pop-up from visibly moving when created
	* src/lib/gsudoku.py Stop number pop-up from being in taskbar list (Bug #406767)
	* src/lib/gnome_sudoku.py Change title name from 'Gnome Sudoku' to 'Sudoku' (Bug #410433)

2007-03-24  Robert Ancell <robert.ancell@gmail.com>
