@@ -1,5 +1,12 @@
 2007-05-15  Andreas Røsdal  <andreasr@gnome.org>
 
+	* src/lib/gnome_sudoku.py: 
+	* help/C/gnome-sudoku.xml: Make the main menu consistent
+	with the rest of gnome-games.Rename  "Game" -> "Tools" 
+	and  "File" -> "Game" Patch from Thomas Andersen in Bug #408440.
+
+2007-05-15  Andreas Røsdal  <andreasr@gnome.org>
+
 	* src/lib/gnome_sudoku.py: Use Ctrl-H for hint. Patch from
 	Thomas Andersen in Bug #420325.
 
